# mkdir

./: LICENSE  README.md  pyproject.toml  task.yml
.github/workflows/: test.yml
mkdir/: main.py
tests/: test_main.py
