[project]
name = "mkdir"
version = "0.1.0"
description = "Make a directory"
authors = [{ name = "Bonajo", email = "m.bonajo@fontys.nl" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "prepare-toolbox>=0.4.0",
]

[dependency-groups]
test = [
    "pytest>=7.4.4",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
